1999-05-27  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* config/ltconfig, config/ltmain.sh, config/libtool.m4i: Updated
	to libtool 1.3.2 plus a few patches.
	* config/config.guess, config/config.sub: Ditto.

1999-05-25  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/FAQ (tar-patch): Mention sparse file problem.

	* recover-src/uscan.l: #undef `ECHO' after #include amanda.h; some
	system header files may define it.
	Reported by Dan Lipofsky <danlip@cyc.com>

	* */Makefile.am: Do not define ACLOCAL_M4, COMPILE or
	AMANDA_CFLAGS.
	* Makefile.am: Create acinclude.m4 in the top-level directory.
	* config/Makefile.am: Create link to acconfig.h in the top-level
	directory.
	* configure.in: Add AMANDA_CFLAGS to CFLAGS.
	* common-src/Makefile.am: Create genversion.h with #defines, to
	avoid genversion-specific CPPFLAGS.
	* common-src/genversion.c: #include genversion.h
	* common-src/version.h: VERSION_COMMENT must be const, as in
	version.c.

1999-05-24  Mike Grupenhoff <kashmir@munge.com>

	* server-src/amcheck.c (main): if we reap a bogus pid, print
	out the error message we generate, instead of whatever junk
	happens to be in the buffer.

1999-05-23  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/amindex.h: Keep P macro expression in a single line.
	Reported by Patrick Harrold <patrickh@nasco-inc.com>

	* common-src/Makefile.am (statfs_LDADD): Added alloc.obj.

	* common-src/statfs.c (STATFS_SCALE, sys/statvfs.h): If f_frsize is
	zero, use f_bsize.  It now works with GNU libc 2.1.
	Reported by Heikki Vatiainen <hessu@cs.tut.fi>

1999-05-22 Alex Pilosov <alex@pilosoft.com>

	* server-src/amindexd.c (is_dump_host_valid): sanitize_name(host)
	before doing a stat.
	* server-src/tapefile.c (lookup_nb_tape): init pos to 0.

1999-05-19 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/reporter.c: take the orig size from the SUCCESS line.
	use value from the infofile only the datestamp are equal.
	Write all available value.
